[tool.poetry]
name = "medley"
version = "0.1.0"
description = ""
authors = ["nghia-ndx <nghia.ndx@gmail.com>"]
readme = "README.md"
packages = [{include = "medley"}]

[tool.poetry.dependencies]
python = "^3.8"
torch-deephash-dataset = {git = "https://github.com/nghia-ndx/torch-deephash-dataset"}
pydantic = "^1.10.4"
torchvision = "~0.13.0"
numpy = "~1.24"
tqdm = "^4.64.1"
timm = "^0.6.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
